# ripstream

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PACKAGING.md  README.md  build.bat  build.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/scripts/: post-create.sh  post-start.sh
examples/: __init__.py  download_provider_usage.py  model_usage.py
src/ripstream/: __init__.py
src/ripstream/config/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py
tests/config/: __init__.py  test_base_config.py  test_services.py  test_user_config.py
tests/core/: __init__.py  test_url_parser.py  test_utils.py
tests/downloader/: __init__.py  test_base_downloader.py  test_base_downloader_enhanced.py  test_config.py  test_progress_callback_exceptions.py  test_progress_enhanced.py  test_qobuz_client_enhanced.py  test_qobuz_downloader.py  test_qobuz_downloader_enhanced.py  test_queue_enhanced.py  test_session_enhanced.py  test_utils.py
tests/metadata/: __init__.py  test_artwork.py  test_tagger.py  test_tagger_probe.py
tests/models/: __init__.py  test_album.py  test_artist.py  test_artist_simple.py  test_artwork.py  test_audio.py  test_base_models.py  test_database_models.py  test_download_audio_info_persistence.py  test_download_service.py  test_factories.py  test_favorites_service.py  test_models_init.py  test_models_utils.py  test_playlist.py  test_probe_toggle_behavior.py  test_track.py
tests/ui/: __init__.py  conftest.py  test_artist_countdown_integration.py  test_discography_lazy_tracks.py  test_discography_view_active_status.py  test_download_details_integration.py  test_downloads_active_signal.py  test_downloads_view.py  test_downloads_view_retry_button.py  test_favorites_toggle_and_gallery.py  test_main_panel.py  test_main_window_artist_progress.py  test_metadata_fetcher_artist_countdown.py  test_metadata_service.py  test_metadata_service_artist_progress.py  test_navbar.py  test_preferences.py  test_preferences_probe_toggle.py  test_progress_integration.py  test_retry_functionality.py  test_session_manager.py  test_session_restore_integration.py  test_worker_filesystem_retry.py
(+89 files in other folders)
