[project]
name = "ripstream"
version = "0.1.0"
description = "ripstream is a cross-platform music downloader for qobuz, deezer, tidal, etc."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "mutagen>=1.47.0",
    "pillow>=10.0.0",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "qtawesome>=1.4.0",
    "sqlalchemy>=2.0.41",
]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
    "pytest-qt>=4.5.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ripstream"]
exclude = ["tests"]

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::RuntimeWarning:unittest.mock",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.format]
preview = true
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
preview = true
select = [
    "E4",
    "E7",
    "E9",
    "W291",
    "YTT",
    "T10",
    "ICN",
    "INP",
    "Q",
    "RSE",
    "SLOT",
    "INT",
    "FLY",
    "LOG",
    "C90",
    "T20",
    "D",
    "RET",
    "PD",
    "N",
    "PIE",
    "SIM",
    "S",
    "G",
    "ERA",
    "ASYNC",
    "TID",
    "UP",
    "SLF",
    "BLE",
    "C4",
    "I",
    "F",
    "A",
    "ARG",
    "PTH",
    "RUF",
    "B",
    "TCH",
    "DTZ",
    "PYI",
    "PT",
    "EM",
    "TRY",
    "PERF",
    "CPY",
    # "ANN"
]
ignore = [
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "D", "ANN", "T201", "ASYNC", "ARG", "PTH", "TRY", "SLF001"]
"*.ipynb" = ["T201"]
"examples/*" = ["BLE001"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["input", "id", "bytes"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv]
default-groups = ["dev"]

[tool.coverage.run]
omit = [
    "tests/",
    "test_*.py",
    "*_test.py",
    "*/tests/*",
]
